--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -33,6 +33,9 @@ server {
   server_name localhost;
   root /app;
 
+  add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+  expires off;
+  proxy_no_cache 1;
 
   # To make sure any assets can get through :)
   location / {
